<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/showlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/image_show_logo"
        android:contentDescription="@string/button_showAllNations_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/AllCharactersButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_design_allcharacters"
            android:fontFamily="@font/roboto_mono_light"
            android:onClick="showAllCharacters"
            android:padding="0dp"
            android:text="@string/app_const_all"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/airNationCharactersButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_filterAirNation_desc"
            android:onClick="filterCharacters"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_nation_air" />

        <ImageButton
            android:id="@+id/waterNationCharactersButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_filterWaterNation_desc"
            android:onClick="filterCharacters"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_nation_water" />

        <ImageButton
            android:id="@+id/earthNationCharactersButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_filterEarthNation_desc"
            android:onClick="filterCharacters"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_nation_earth" />

        <ImageButton
            android:id="@+id/fireNationCharactersButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_filterFireNation_desc"
            android:onClick="filterCharacters"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_nation_fire" />

    </LinearLayout>

    <TextView
        android:id="@+id/displayResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_mono_light"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:scrollbars="none" />

</LinearLayout>